--- a/AcunMedyaAkademiAgency/AcunMedyaAkademiAgency.csproj
+++ b/AcunMedyaAkademiAgency/AcunMedyaAkademiAgency.csproj
@@ -233,6 +233,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\UI1.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
