--- a/AcunMedyaAkademiAgency/AcunMedyaAkademiAgency.csproj
+++ b/AcunMedyaAkademiAgency/AcunMedyaAkademiAgency.csproj
@@ -233,6 +233,10 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\Admin1.png" />
+    <Content Include="images\Admin2.png" />
+    <Content Include="images\Admin3.png" />
+    <Content Include="images\Admin4.png" />
     <Content Include="images\UI1.png" />
     <Content Include="images\UI2.png" />
     <Content Include="images\UI3.png" />
